--- a/Giddy Goat Coffee/Giddy Goat Coffee/NewStoryboard.storyboard
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/NewStoryboard.storyboard
@@ -216,12 +216,12 @@
                             <constraint firstAttribute="bottom" secondItem="a90-63-LrL" secondAttribute="bottom" constant="143" id="PsY-DU-vlh"/>
                             <constraint firstItem="hJy-zD-Fu0" firstAttribute="centerX" secondItem="Lvz-Hj-ssU" secondAttribute="centerX" type="default" id="RVF-ob-89v"/>
                             <constraint firstAttribute="bottom" secondItem="mGR-Gb-mUD" secondAttribute="bottom" constant="7" id="Vvz-ZW-gfT"/>
+                            <constraint firstItem="LQR-iP-Pc5" firstAttribute="top" secondItem="ic0-C6-1yG" secondAttribute="top" type="default" id="a6Z-kZ-rla"/>
                             <constraint firstAttribute="trailing" secondItem="Lvz-Hj-ssU" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="bzX-n5-hBI"/>
                             <constraint firstAttribute="trailing" secondItem="mGR-Gb-mUD" secondAttribute="trailing" constant="26" id="cxK-Va-NjY"/>
                             <constraint firstItem="KhU-Ms-DLM" firstAttribute="top" secondItem="cs4-hI-32E" secondAttribute="top" type="default" id="dJ5-Gj-Rno"/>
                             <constraint firstItem="ic0-C6-1yG" firstAttribute="top" secondItem="cs4-hI-32E" secondAttribute="top" constant="391" id="dQg-rf-B9Q"/>
                             <constraint firstItem="PMl-ox-IgV" firstAttribute="top" secondItem="cs4-hI-32E" secondAttribute="top" constant="51" id="erR-ce-hi5"/>
-                            <constraint firstAttribute="bottom" secondItem="LQR-iP-Pc5" secondAttribute="bottom" constant="10" id="i1P-K9-EcG"/>
                             <constraint firstItem="hJy-zD-Fu0" firstAttribute="top" secondItem="cs4-hI-32E" secondAttribute="top" type="default" id="qvC-Ey-qmo"/>
                             <constraint firstAttribute="trailing" secondItem="C1y-sA-bbw" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="r90-Oj-e1h"/>
                             <constraint firstItem="ic0-C6-1yG" firstAttribute="leading" secondItem="cs4-hI-32E" secondAttribute="leading" constant="281" id="vU3-6W-uep"/>
@@ -237,7 +237,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JeJ-6G-Xhw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="480" y="-402"/>
+            <point key="canvasLocation" x="340" y="-402"/>
         </scene>
         <!--Detail View Controller - Detail-->
         <scene sceneID="hVT-JS-LYd">
@@ -402,14 +402,14 @@ The Giddy Goat Coffee House       www.tggch.com</string>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="z8i-oK-Esk" firstAttribute="centerX" secondItem="wVV-1w-OLD" secondAttribute="centerX" type="default" id="1j1-JM-ly0"/>
-                            <constraint firstItem="hjb-Kf-6V0" firstAttribute="bottom" secondItem="cZb-8u-tR4" secondAttribute="bottom" type="default" id="5jj-HA-iIC"/>
                             <constraint firstItem="0vQ-Dv-Tgg" firstAttribute="centerY" secondItem="wVV-1w-OLD" secondAttribute="centerY" type="default" id="AOq-1E-e9j"/>
                             <constraint firstAttribute="trailing" secondItem="cZb-8u-tR4" secondAttribute="trailing" constant="103" id="Bta-02-fBM"/>
+                            <constraint firstAttribute="bottom" secondItem="cZb-8u-tR4" secondAttribute="bottom" constant="11" id="Coe-qh-A7F"/>
                             <constraint firstItem="rud-Nc-WWE" firstAttribute="leading" secondItem="wa3-Vh-Ndj" secondAttribute="leading" constant="52" id="DWA-Wx-xtJ"/>
-                            <constraint firstAttribute="bottom" secondItem="hjb-Kf-6V0" secondAttribute="bottom" constant="11" id="DZs-Qo-WZh"/>
                             <constraint firstItem="0vQ-Dv-Tgg" firstAttribute="bottom" secondItem="wa3-Vh-Ndj" secondAttribute="bottom" type="default" id="HCV-qy-vkn"/>
                             <constraint firstItem="BrL-fE-jJP" firstAttribute="trailing" secondItem="rud-Nc-WWE" secondAttribute="trailing" type="default" id="HNB-SX-F3R"/>
                             <constraint firstItem="wVV-1w-OLD" firstAttribute="leading" secondItem="wa3-Vh-Ndj" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="J4d-Dr-fHV"/>
+                            <constraint firstAttribute="bottom" secondItem="hjb-Kf-6V0" secondAttribute="bottom" constant="25" id="MGj-rR-Gps"/>
                             <constraint firstItem="0vQ-Dv-Tgg" firstAttribute="leading" secondItem="wa3-Vh-Ndj" secondAttribute="leading" type="default" id="SX6-mD-g23"/>
                             <constraint firstAttribute="bottom" secondItem="nAX-dD-qam" secondAttribute="bottom" constant="48" id="UPW-wG-lcb"/>
                             <constraint firstItem="MaT-2q-5AZ" firstAttribute="leading" secondItem="wa3-Vh-Ndj" secondAttribute="leading" type="default" id="ZSB-yF-Xah"/>
@@ -432,7 +432,7 @@ The Giddy Goat Coffee House       www.tggch.com</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1L9-Bl-ckW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4" y="-402"/>
+            <point key="canvasLocation" x="-33" y="-402"/>
         </scene>
     </scenes>
     <resources>
@@ -453,46 +453,6 @@ The Giddy Goat Coffee House       www.tggch.com</string>
         <image name="punchButtonPressed.png" width="107" height="45"/>
         <image name="specialsTitle.png" width="429" height="81"/>
     </resources>
-    <classes>
-        <class className="AwesomeMenu" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AwesomeMenu.h"/>
-        </class>
-        <class className="GGCDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCDetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backgroundTapped:"/>
-                <relationship kind="outlet" name="itemDescripLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="itemNameLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="GGCFirstViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCFirstViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="specialsLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="GGCPunchViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCPunchViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="callPopup:"/>
-                <relationship kind="action" name="getCardPunch:"/>
-                <relationship kind="action" name="getPhotoForSharing:"/>
-                <relationship kind="action" name="gotoMap:"/>
-                <relationship kind="action" name="shareMe:"/>
-                <relationship kind="outlet" name="menu" candidateClass="AwesomeMenu"/>
-            </relationships>
-        </class>
-        <class className="GGCSecondViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCSecondViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="coffeeLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="coffeePicker" candidateClass="UIPickerView"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
