--- a/Giddy Goat Coffee/Giddy Goat Coffee/NewStoryboard.storyboard
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/NewStoryboard.storyboard
@@ -131,6 +131,7 @@
                     <connections>
                         <outlet property="punchLabel" destination="fRb-Tr-BOS" id="0Ee-oF-MB2"/>
                         <segue destination="ohC-3f-rmB" kind="modal" identifier="segueToCredits" modalTransitionStyle="flipHorizontal" id="12L-0J-sDb"/>
+                        <segue destination="PaJ-gI-H9f" kind="modal" identifier="segueToScanView" modalTransitionStyle="coverVertical" id="mVb-bc-5kf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p90-Sj-om9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -339,6 +340,66 @@ The Giddy Goat Coffee House       www.tggch.com</string>
             </objects>
             <point key="canvasLocation" x="-487" y="283"/>
         </scene>
+        <!--Scan View Controller - Scan-->
+        <scene sceneID="9dZ-LO-QQV">
+            <objects>
+                <viewController title="Scan" id="PaJ-gI-H9f" customClass="GGCScanViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3TS-X3-PwF">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="scaleToFill" image="giddykittyBackground.png" id="r7P-py-qSd"/>
+                            <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="baristaScanTitle.png" id="rAG-pq-YGX">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="193" id="nc8-cg-IYI"/>
+                                    <constraint firstAttribute="height" constant="78" id="rSa-Cn-Y6G"/>
+                                </constraints>
+                            </imageView>
+                            <view translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="vlO-ZG-SG9" customClass="ZBarReaderView">
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="dpk-DF-wLM">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="144" id="1FY-NF-kp0"/>
+                                    <constraint firstAttribute="height" constant="59" id="PKq-pt-RNV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="cancelButton.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="cancelButtonPressed.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelButtonPressed:" destination="PaJ-gI-H9f" eventType="touchUpInside" id="gnL-Tk-9Wr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="r7P-py-qSd" firstAttribute="top" secondItem="3TS-X3-PwF" secondAttribute="top" type="default" id="165-LN-wdT"/>
+                            <constraint firstItem="r7P-py-qSd" firstAttribute="trailing" secondItem="3TS-X3-PwF" secondAttribute="trailing" type="default" id="4Yh-Gv-nAv"/>
+                            <constraint firstItem="rAG-pq-YGX" firstAttribute="centerX" secondItem="vlO-ZG-SG9" secondAttribute="centerX" type="default" id="Auw-EY-d1k"/>
+                            <constraint firstItem="vlO-ZG-SG9" firstAttribute="top" secondItem="3TS-X3-PwF" secondAttribute="top" constant="53" id="JPD-dD-4ki"/>
+                            <constraint firstItem="rAG-pq-YGX" firstAttribute="top" secondItem="3TS-X3-PwF" secondAttribute="top" constant="-12" id="Qib-1Q-FpX"/>
+                            <constraint firstAttribute="trailing" secondItem="vlO-ZG-SG9" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Svy-XZ-lcI"/>
+                            <constraint firstItem="r7P-py-qSd" firstAttribute="leading" secondItem="3TS-X3-PwF" secondAttribute="leading" type="default" id="TcJ-w5-XfR"/>
+                            <constraint firstAttribute="bottom" secondItem="vlO-ZG-SG9" secondAttribute="bottom" constant="177" id="VZM-Kn-QoM"/>
+                            <constraint firstItem="dpk-DF-wLM" firstAttribute="leading" secondItem="3TS-X3-PwF" secondAttribute="leading" constant="7" id="cpG-p6-YFt"/>
+                            <constraint firstAttribute="bottom" secondItem="dpk-DF-wLM" secondAttribute="bottom" constant="5" id="fzq-ub-W8M"/>
+                            <constraint firstItem="r7P-py-qSd" firstAttribute="bottom" secondItem="3TS-X3-PwF" secondAttribute="bottom" type="default" id="qRG-wC-QS6"/>
+                            <constraint firstItem="vlO-ZG-SG9" firstAttribute="leading" secondItem="3TS-X3-PwF" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="uUY-qz-aSU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="readerView" destination="vlO-ZG-SG9" id="SBP-Pr-eDD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g4X-bD-mga" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-33" y="283"/>
+        </scene>
         <!--First View Controller - First-->
         <scene sceneID="AH8-K2-HAQ">
             <objects>
@@ -454,13 +515,17 @@ The Giddy Goat Coffee House       www.tggch.com</string>
         <image name="arrow-east.png" width="19" height="16"/>
         <image name="arrow-west.png" width="19" height="16"/>
         <image name="background@2x.png" width="640" height="960"/>
+        <image name="baristaScanTitle.png" width="395" height="98"/>
         <image name="bg-menuitem.png" width="50" height="50"/>
         <image name="bkgd-woodgrain.png" width="320" height="480"/>
+        <image name="cancelButton.png" width="109" height="43"/>
+        <image name="cancelButtonPressed.png" width="109" height="43"/>
         <image name="chalkboard-icon-512x512.png" width="512" height="512"/>
         <image name="coffeesTitle.png" width="429" height="81"/>
         <image name="creditsTitle.png" width="429" height="81"/>
         <image name="giddyTitleDark1.png" width="429" height="81"/>
         <image name="giddyTitleDark2.png" width="429" height="81"/>
+        <image name="giddykittyBackground.png" width="480" height="640"/>
         <image name="pocketCard.png" width="577" height="738"/>
         <image name="punchButton.png" width="110" height="45"/>
         <image name="punchButtonPressed.png" width="107" height="45"/>
@@ -497,6 +562,14 @@ The Giddy Goat Coffee House       www.tggch.com</string>
                 <relationship kind="outlet" name="punchLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
+        <class className="GGCScanViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCScanViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelButtonPressed:"/>
+                <relationship kind="action" name="scanPunchCode:"/>
+                <relationship kind="outlet" name="readerView" candidateClass="ZBarReaderView"/>
+            </relationships>
+        </class>
         <class className="GGCSecondViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCSecondViewController.h"/>
             <relationships>
@@ -507,6 +580,9 @@ The Giddy Goat Coffee House       www.tggch.com</string>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ZBarReaderView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZBarReaderView.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
